# yamadesk

./: Cargo.toml  Makefile  README.md  yamadesk.service  yamadesk.toml
src/: config.rs  main.rs  yamaha.rs
